# mcapdecode-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
mcap2arrow/mcap2arrow/: Cargo.toml  README.md
mcap2arrow/mcap2arrow-arrow/src/: projection.rs
mcap2arrow/mcap2arrow-core/src/: decoder.rs
mcap2arrow/mcap2arrow-ros2idl/src/: lib.rs
mcap2arrow/mcap2arrow/src/: arrow_ext.rs  error.rs  lib.rs  reader.rs
mcap2arrow/mcap2arrow/tests/: reader.rs
mcapdecode/mcapdecode/: Cargo.toml  README.md
mcapdecode/mcapdecode-core/src/schema/: format.rs  types.rs
mcapdecode/mcapdecode-core/tests/: schema_format.rs
mcapdecode/mcapdecode-ros2idl/src/: lex.rs  parser.rs
mcapdecode/mcapdecode-ros2idl/tests/: schema.rs
mcapdecode/mcapdecode-ros2msg/src/: lib.rs  resolver.rs  schema_bundle.rs
mcapdecode/mcapdecode-ros2msg/tests/: parser.rs
mcapdecode/mcapdecode/src/: lib.rs  reader.rs
mcapdecode/mcapdecode/tests/: reader.rs
tools/mcaptui/: Cargo.toml  README.md
tools/mcaptui/src/: app.rs  format.rs  lib.rs  loader.rs  main.rs  runtime.rs  schema.rs  terminal.rs  ui.rs
tools/mcaptui/src/app/: detail.rs  lifecycle.rs  navigation.rs  util.rs
tools/mcaptui/tests/: app.rs  format.rs
tools/mcaptui/tests/fixtures/: readme-demo.mcap
tools/transmcap/: Cargo.toml  README.md
tools/transmcap/src/commands/: convert.rs
