[workspace]
members = ["mcapdecode/*", "tools/*"]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.90"
license = "Apache-2.0"
repository = "https://github.com/eduidl/mcapdecode-rs"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "README.md"]

[workspace.dependencies]
mcapdecode = { path = "mcapdecode/mcapdecode", version = "=0.4.0" }
mcapdecode-arrow = { path = "mcapdecode/mcapdecode-arrow", version = "=0.4.0" }
mcapdecode-core = { path = "mcapdecode/mcapdecode-core", version = "=0.4.0" }
mcapdecode-protobuf = { path = "mcapdecode/mcapdecode-protobuf", version = "=0.4.0" }
mcapdecode-ros2-common = { path = "mcapdecode/mcapdecode-ros2-common", version = "=0.4.0" }
mcapdecode-ros2idl = { path = "mcapdecode/mcapdecode-ros2idl", version = "=0.4.0" }
mcapdecode-ros2msg = { path = "mcapdecode/mcapdecode-ros2msg", version = "=0.4.0" }

arrow = { version = "57.3.0", default-features = false }
thiserror = "2.0.18"

[workspace.metadata.release]
allow-branch = ["main"]
shared-version = true
tag-prefix = ""
