[package]
name = "mcap2arrow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true
description = "MCAP to Arrow conversion library with protobuf and ROS 2 decoders."
readme = "README.md"

[dependencies]
mcap2arrow-arrow.workspace = true
mcap2arrow-core.workspace = true
arrow.workspace = true
mcap = "0.24.0"
memmap2 = "0.9.10"
rayon = "1.11.0"
thiserror.workspace = true

mcap2arrow-protobuf = { workspace = true, optional = true }
mcap2arrow-ros2idl = { workspace = true, optional = true }
mcap2arrow-ros2msg = { workspace = true, optional = true }

[features]
default = ["protobuf", "ros2idl", "ros2msg"]
protobuf = ["dep:mcap2arrow-protobuf"]
ros2idl = ["dep:mcap2arrow-ros2idl"]
ros2msg = ["dep:mcap2arrow-ros2msg"]
