[package]
name = "mcapdecode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true
description = "MCAP decoding library with optional Arrow integration, protobuf, and ROS 2 decoders."
readme = "README.md"

[dependencies]
mcapdecode-arrow = { workspace = true, optional = true }
mcapdecode-core.workspace = true
arrow = { workspace = true, optional = true }
mcap = "0.24.0"
memmap2 = "0.9.10"
rayon = "1.11.0"
thiserror.workspace = true

mcapdecode-protobuf = { workspace = true, optional = true }
mcapdecode-ros2idl = { workspace = true, optional = true }
mcapdecode-ros2msg = { workspace = true, optional = true }

[features]
default = ["protobuf", "ros2idl", "ros2msg"]
arrow = ["dep:arrow", "dep:mcapdecode-arrow"]
protobuf = ["dep:mcapdecode-protobuf"]
ros2idl = ["dep:mcapdecode-ros2idl"]
ros2msg = ["dep:mcapdecode-ros2msg"]
